@@ -350,6 +350,7 @@ Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
 META.yml
+MYMETA.json
 README
 share/dtd/xhtml-lat1.ent
 share/dtd/xhtml-special.ent
