@@ -12,7 +12,7 @@ BEGIN {
     require Time::Local;
 
     # Declare early to make sure Jifty::Record::schema_version works
-    $Jifty::VERSION = '1.20221';
+    $Jifty::VERSION = '1.50430';
 }
 
 =head1 NAME
